[gd_scene load_steps=12 format=3 uid="uid://crh83h6ruj0f"]

[ext_resource type="Shader" path="res://Scenes/UserSetup/wavy_font.gdshader" id="1_363gx"]
[ext_resource type="Script" path="res://Scenes/UserSetup/VBoxContainer.gd" id="1_b3sqp"]
[ext_resource type="FontFile" uid="uid://d3ujqgo42uhhf" path="res://Assets/Fonts/JF-Dot-Ayu18.ttf" id="3_x7q2v"]
[ext_resource type="Texture2D" uid="uid://bafd50kauodak" path="res://Assets/Sprites/neko-base.png" id="4_v6r5u"]
[ext_resource type="Texture2D" uid="uid://d3e3l81fn738i" path="res://Assets/Sprites/dog-base.png" id="5_pwbaa"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_g0c0t"]
shader = ExtResource("1_363gx")
shader_parameter/height = 5.0
shader_parameter/frequency = 5.0
shader_parameter/speed = 5.0

[sub_resource type="Theme" id="Theme_eeeun"]
default_font = ExtResource("3_x7q2v")
default_font_size = 64

[sub_resource type="Animation" id="Animation_3ioyl"]
resource_name = "appear_text"
length = 3.0

[sub_resource type="Animation" id="Animation_n07qh"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.94902, 0.952941, 0.960784, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_1s7f2"]
resource_name = "appear_pets"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.94902, 0.952941, 0.960784, 1), Color(0.94902, 0.952941, 0.960784, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Dog:material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Cat:material")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect/CenterContainer/VBoxContainer/MarginContainer/ColorRect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ol1q3"]
_data = {
"RESET": SubResource("Animation_n07qh"),
"appear_pets": SubResource("Animation_1s7f2"),
"appear_text": SubResource("Animation_3ioyl")
}

[node name="FirstTimeSetup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.941176)

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
script = ExtResource("1_b3sqp")

[node name="DogOrCat" type="RichTextLabel" parent="ColorRect/CenterContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_g0c0t")
custom_minimum_size = Vector2(1200, 70)
layout_mode = 2
theme = SubResource("Theme_eeeun")
theme_override_colors/default_color = Color(0.333333, 0.333333, 0.333333, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
bbcode_enabled = true
text = "[center]犬派ですか？それとも猫派ですか？[/center]"

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/CenterContainer/VBoxContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
theme_override_constants/separation = 100
alignment = 1

[node name="Cat" type="TextureRect" parent="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("4_v6r5u")
expand_mode = 3

[node name="Dog" type="TextureRect" parent="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
texture = ExtResource("5_pwbaa")
expand_mode = 3
flip_h = true

[node name="ColorRect" type="ColorRect" parent="ColorRect/CenterContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
color = Color(0.94902, 0.952941, 0.960784, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ol1q3")
}

[connection signal="mouse_entered" from="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Cat" to="ColorRect/CenterContainer/VBoxContainer" method="_on_cat_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Cat" to="ColorRect/CenterContainer/VBoxContainer" method="_on_cat_mouse_exited"]
[connection signal="mouse_entered" from="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Dog" to="ColorRect/CenterContainer/VBoxContainer" method="_on_dog_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/CenterContainer/VBoxContainer/MarginContainer/HBoxContainer/Dog" to="ColorRect/CenterContainer/VBoxContainer" method="_on_dog_mouse_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="ColorRect/CenterContainer/VBoxContainer" method="_on_animation_player_animation_finished"]
